# brk

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  LICENSE.md  README.md  TODO.md  btc-cycle-sim.html  dist-workspace.toml  docker-build.sh  docker-compose.yml  publish.sh  rust-toolchain.toml  update.sh
bindex/: Cargo.toml
bindex/src/: indexer.rs  lib.rs  main.rs
bindex/src/storage/: mod.rs
bindex/src/structs/: addressindex.rs  addressindextxoutindex.rs  addresstypeindex.rs  amount.rs  date.rs  height.rs  mod.rs  prefix.rs  slice.rs  store.rs  stores.rs  txindex.rs  txindexvout.rs  txinindex.rs  txoutindex.rs  vec.rs  vecs.rs  version.rs  vin.rs  vout.rs
computer/: Cargo.toml
computer/src/: lib.rs  main.rs
computer/src/storage/: fjalls.rs  storable_vecs.rs
computer/src/structs/: addressindextxoutindex.rs  bitcoin.rs  date.rs  mod.rs
crates/blk/: Cargo.toml  README.md
crates/blk/src/: args.rs  fields.rs  formatter.rs  main.rs  mode.rs  path.rs  selector.rs  usage.rs
crates/brk/: .gitignore  Cargo.toml  README.md  flamegraph.sh  samply.sh
crates/brk/src/: lib.rs  main.rs
crates/brk_alloc/: Cargo.toml
crates/brk_alloc/src/: lib.rs
crates/brk_bencher/: Cargo.toml  README.md
crates/brk_bencher/src/: disk.rs  io.rs  lib.rs  memory.rs  progression.rs
crates/brk_binder/: Cargo.toml  DESIGN.md  README.md
crates/brk_binder/src/: javascript.rs  js.rs  lib.rs  openapi.rs  python.rs  rust.rs  tree.rs  types.rs
crates/brk_bindgen/: .gitignore  Cargo.toml  DESIGN.md  README.md
crates/brk_bindgen/src/: lib.rs  openapi.rs  syntax.rs
crates/brk_bindgen/tests/: catalog_test.rs
crates/brk_bridge/: Cargo.toml  README.md
crates/brk_bridge/src/: js.rs
crates/brk_bundler/: Cargo.toml  README.md
crates/brk_bundler/examples/: bundle.rs
crates/brk_bundler/src/: lib.rs
crates/brk_cli/: Cargo.toml  README.md
crates/brk_cli/src/: bridge.rs  config.rs  lib.rs  main.rs  paths.rs  query.rs  run.rs  services.rs  website.rs
crates/brk_client/: Cargo.toml  README.md
crates/brk_client/examples/: basic.rs  fetch_prices.rs  tree.rs
crates/brk_client/src/: lib.rs  main.rs
crates/brk_client/tests/: hash_prefix.rs
crates/brk_cohort/: Cargo.toml  README.md
crates/brk_cohort/src/: addr.rs  address.rs  age_range.rs  amount_range.rs  by_addr_type.rs  by_address_type.rs  by_age_range.rs  by_amount_range.rs  by_any_addr.rs  by_any_address.rs  by_class.rs  by_entry.rs  by_epoch.rs  by_ge_amount.rs  by_loss.rs  by_lt_amount.rs  by_max_age.rs  by_min_age.rs  by_profit.rs  by_profitability_range.rs  by_spendable_type.rs  by_term.rs  by_type.rs  by_year.rs  class.rs  cohort_context.rs  filter.rs  lib.rs  loss.rs  over_age.rs  over_amount.rs  profit.rs  profitability_range.rs  spendable_type.rs  term.rs  time_filter.rs  under_age.rs  under_amount.rs  unspendable_type.rs  utxo.rs
crates/brk_computer/: .gitignore  Cargo.toml  README.md  flamegraph.sh  samply.sh
crates/brk_computer/examples/: computer.rs  computer_bench.rs  computer_read.rs  debug_indexer.rs  full_bench.rs  iter.rs  main.rs  pools.rs  price_to_amount.rs  tree.rs
crates/brk_computer/src/: all.rs  blks.rs  blocks.rs  chain.rs  cointime.rs  constants.rs  fetched.rs  indexes.rs  lib.rs  main.rs  market.rs  mining.rs  positions.rs  price.rs  stores.rs  traits.rs  transactions.rs  txins.rs  txouts.rs  utils.rs
crates/brk_core/: Cargo.toml  README.md
crates/brk_core/src/: error.rs  lib.rs
crates/brk_error/: Cargo.toml  README.md
crates/brk_error/src/: lib.rs
crates/brk_exit/: Cargo.toml  README.md
crates/brk_exit/examples/: main.rs
crates/brk_exit/src/: lib.rs
crates/brk_fetcher/: Cargo.toml  README.md
crates/brk_fetcher/examples/: fetch_kraken.rs  fetcher.rs  main.rs
crates/brk_fetcher/src/: binance.rs  brk.rs  kraken.rs  lib.rs  main.rs  ohlc.rs  retry.rs  source.rs
crates/brk_grouper/: Cargo.toml  README.md
crates/brk_grouper/src/: address.rs  amount_filter.rs  by_address_type.rs  by_age_range.rs  by_amount_range.rs  by_epoch.rs  by_ge_amount.rs  by_lt_amount.rs  by_max_age.rs  by_min_age.rs  by_spendable_type.rs  by_term.rs  by_type.rs  by_unspendable_type.rs  by_year.rs  cohort_context.rs  cohort_name.rs  filter.rs  filtered.rs  lib.rs  state_level.rs  term.rs  time_filter.rs  utxo.rs
crates/brk_indexer/: BENCH.md  Cargo.toml  README.md
crates/brk_indexer/examples/: indexer.rs  indexer_bench.rs  indexer_bench2.rs  indexer_read.rs  indexer_read_speed.rs  indexer_single_vs_multi.rs  main.rs
crates/brk_indexer/src/: constants.rs  indexes.rs  lengths.rs  lib.rs  main.rs  processor.rs  range_map.rs  readers.rs  safe_lengths.rs  stores.rs  stores_redb.rs  stores_v2.rs  stores_v3.rs  vecs.rs
crates/brk_interface/: Cargo.toml  README.md
crates/brk_interface/examples/: main.rs
crates/brk_interface/src/: deser.rs  format.rs  ids.rs  index.rs  lib.rs  maybe_ids.rs  metrics.rs  output.rs  pagination.rs  params.rs  searcher.rs  table.rs  vecs.rs
crates/brk_iterator/: Cargo.toml  README.md
crates/brk_iterator/examples/: iterator.rs  sigops_bench.rs
crates/brk_iterator/src/: builder.rs  iterator.rs  lib.rs  range.rs  source.rs  state.rs
crates/brk_logger/: Cargo.toml  README.md
crates/brk_logger/examples/: log.rs  main.rs
crates/brk_logger/src/: format.rs  hook.rs  lib.rs  main.rs  rate_limit.rs
indexer/: .gitignore  Cargo.toml  README.md
indexer/src/: lib.rs  main.rs
indexer/src/structs/: addressbytes.rs  addressindex.rs  addresstype.rs  addresstypeindex.rs  amount.rs  blockhash.rs  (+15 more)
iterator/: Cargo.toml  README.md
iterator/src/: blk_index_to_blk_path.rs  blk_index_to_blk_recap.rs  blk_metadata.rs  blk_metadata_and_block.rs  blk_recap.rs  error.rs  height.rs  lib.rs  main.rs
pricer/: Cargo.toml
pricer/src/: lib.rs  main.rs  price.rs
server/: Cargo.toml
server/src/: header_map.rs  lib.rs  main.rs  response.rs
snkrj/: Cargo.toml
snkrj/src/: base.rs  lib.rs  main.rs  multi.rs  traits.rs  unique.rs
storable_vec/: Cargo.toml
storable_vec/src/: any.rs  error.rs  lib.rs  main.rs  type_.rs  version.rs
(+5199 files in other folders)
