[package]
name = "bindex"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin_hashes = "0.16.0"
biter = { path = "../biter" }
color-eyre = "0.6.3"
derive_deref = "1.1.1"
exit = { path = "../exit" }
jiff = "0.1.24"
rapidhash = "1.3.0"
rayon = "1.10.0"
snkrj = { path = "../snkrj" }
storable_vec = { path = "../storable_vec" }
