[package]
name = "bomputer"
version = "0.1.0"
edition = "2021"

[dependencies]
iterator = { workspace = true }
color-eyre = { workspace = true }
derive_deref = { workspace = true }
exit = { workspace = true }
fjall = { workspace = true }
indexer = { workspace = true }
jiff = { workspace = true }
storable_vec = { workspace = true }
zerocopy = { workspace = true }
