[package]
name = "bomputer"
description = "A Bitcoin dataset computer built on top of brice"
version = "0.1.0"
edition = "2021"

[dependencies]
iterator = { workspace = true }
color-eyre = { workspace = true }
derive_deref = { workspace = true }
exit = { workspace = true }
fjall = { workspace = true }
indexer = { workspace = true }
pricer = { workspace = true }
storable_vec = { workspace = true }
zerocopy = { workspace = true }
