[package]
name = "bindexer"
description = "A bitcoin-core indexer built on top of biter"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bitcoin = { workspace = true }
color-eyre = { workspace = true }
derive_deref = { workspace = true }
fjall = { workspace = true }
hodor = { workspace = true }
iterator = { workspace = true }
jiff = { workspace = true }
logger = { workspace = true }
rapidhash = "1.3.0"
rayon = { workspace = true }
rlimit = { version = "0.10.2" }
serde = { workspace = true }
serde_bytes = { workspace = true }
storable_vec = { workspace = true }
zerocopy = { workspace = true }
