[package]
name = "biterator"
description = "A very fast Bitcoin block iterator built on top of bitcoin-rust"
version = "0.2.3"
repository = "https://github.com/kibo-money/kibo/tree/main/src/crates/biter"
keywords = ["bitcoin", "block", "iterator"]
categories = ["cryptography::cryptocurrencies", "encoding"]
edition = { workspace = true }
license = { workspace = true }

[features]
bytes = ["dep:fjall", "dep:zerocopy"]

[dependencies]
bitcoin = { workspace = true }
bitcoincore-rpc = "0.19.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
derive_deref = { workspace = true }
fjall = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zerocopy = { workspace = true, optional = true }
