[package]
name = "brice"
description = "A bitcoin price fetcher built on top of bindex"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
derive_deref = { workspace = true }
indexer = { workspace = true }
jiff = { workspace = true }
logger = { workspace = true }
minreq = { version = "2.13.2", features = ["https", "serde_json"] }
serde = { workspace = true }
serde_json = { workspace = true }
storable_vec = { workspace = true }
zerocopy = { workspace = true }
