[package]
name = "bricer"
description = "A bitcoin price fetcher built on top of bindexer"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
color-eyre = { workspace = true }
derive_deref = { workspace = true }
indexer = { workspace = true }
jiff = { workspace = true }
logger = { workspace = true }
minreq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
storable_vec = { workspace = true }
zerocopy = { workspace = true }
