[package]
name = "berver"
version = "0.6.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
color-eyre = { workspace = true }
computer = { workspace = true }
derive_deref = { workspace = true }
indexer = { workspace = true }
jiff = { workspace = true }
logger = { workspace = true }
oxc = { version = "0.49.0", features = ["codegen", "minifier"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
storable_vec = { workspace = true }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["compression-full"] }
zstd = "0.13.2"
