[package]
name = "berver"
description = "A Bitcoin data server built on top of bindexer, bricer and bomputer"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
axum = "0.8.1"
color-eyre = { workspace = true }
computer = { workspace = true }
derive_deref = { workspace = true }
indexer = { workspace = true }
jiff = { workspace = true }
logger = { workspace = true }
oxc = { version = "0.52.0", features = ["codegen", "minifier"] }
serde = { workspace = true }
serde_json = { workspace = true }
storable_vec = { workspace = true }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["compression-full"] }
