[package]
name = "storable_vec"
description = "A very small, fast, efficient and simple storable Vec"
version = "0.1.3"
keywords = ["vec", "disk", "data"]
categories = ["database"]
edition = { workspace = true }
license = { workspace = true }

[features]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
memmap2 = "0.9.5"
rayon = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
zerocopy = { workspace = true }
