[package]
name = "brk"
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true
build = "build.rs"

[features]
full = [
    "bencher",
    "binder",
    "bundler",
    "client",
    "computer",
    "error",
    "fetcher",
    "cohort",
    "indexer",
    "iterator",
    "logger",
    "mcp",
    "mempool",
    "query",
    "reader",
    "rpc",
    "server",
    "store",
    "traversable",
    "types",
]
bencher = ["brk_bencher"]
binder = ["brk_bindgen"]
bundler = ["brk_bundler"]
client = ["brk_client"]
computer = ["brk_computer"]
error = ["brk_error"]
fetcher = ["brk_fetcher"]
cohort = ["brk_cohort"]
indexer = ["brk_indexer"]
iterator = ["brk_iterator"]
logger = ["brk_logger"]
mcp = ["brk_mcp"]
mempool = ["brk_mempool"]
query = ["brk_query"]
reader = ["brk_reader"]
rpc = ["brk_rpc"]
server = ["brk_server"]
store = ["brk_store"]
traversable = ["brk_traversable"]
types = ["brk_types"]

[dependencies]
brk_bencher = { workspace = true, optional = true }
brk_bindgen = { workspace = true, optional = true }
brk_bundler = { workspace = true, optional = true }
brk_client = { workspace = true, optional = true }
brk_computer = { workspace = true, optional = true }
brk_error = { workspace = true, optional = true }
brk_fetcher = { workspace = true, optional = true }
brk_cohort = { workspace = true, optional = true }
brk_indexer = { workspace = true, optional = true }
brk_iterator = { workspace = true, optional = true }
brk_logger = { workspace = true, optional = true }
brk_mcp = { workspace = true, optional = true }
brk_mempool = { workspace = true, optional = true }
brk_query = { workspace = true, optional = true }
brk_reader = { workspace = true, optional = true }
brk_rpc = { workspace = true, optional = true }
brk_server = { workspace = true, optional = true }
brk_store = { workspace = true, optional = true }
brk_traversable = { workspace = true, optional = true }
brk_types = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
