[package]
name = "brk_bridge"
description = "A generator of bridge files for other languages"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
brk_interface = { workspace = true }
brk_structs = { workspace = true }
