[package]
name = "brk_bundler"
description = "A thin wrapper around rolldown"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
log = { workspace = true }
notify = "8.2.0"
rolldown = { version = "0.4.0", package = "brk_rolldown" }
# brk_rolldown = { path = "../../../rolldown/crates/rolldown"}
sugar_path = "1.2.1"
tokio = { workspace = true }
