[package]
name = "brk_bundler"
description = "A thin wrapper around rolldown"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
log = { workspace = true }
notify = "8.2.0"
# rolldown = { path = "../../../rolldown/crates/rolldown", package = "brk_rolldown" }
rolldown = { version = "0.7.0", package = "brk_rolldown" }
sugar_path = "1.2.1"
tokio = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
